--- a/config.json
+++ b/config.json
@@ -3,6 +3,7 @@
     "path_to_domain_file": "assets/1000-domains.txt",
     "database_host": "mongodb://localhost:27017",
     "database_name": "my_test",
-    "database_collection": "text_data"
+    "database_collection": "text_data",
+    "concurrency" : 20
 
 }
