--- a/config.json
+++ b/config.json
@@ -4,6 +4,7 @@
     "database_host": "mongodb://localhost:27017",
     "database_name": "my_test",
     "database_collection": "text_data",
-    "concurrency" : 20
+    "concurrency" : 20,
+    "chrome_timeout": 60
 
 }
