"switch to stateful client"

--- a/config.json
+++ b/config.json
@@ -1,10 +1,10 @@
 {
     "output_directory": "assets/samples/",
-    "path_to_domain_file": "assets/1000-domains.txt",
+    "path_to_domain_file": "/media/mike/WDC4_1/Neo/gerzson.boros/assets/domains.txt",
     "database_host": "mongodb://localhost:27017",
     "database_name": "my_test",
     "database_collection": "text_data",
-    "concurrency" : 1,
+    "concurrency" : 10,
     "chrome_timeout": 60
 
 }
