--- a/config.json
+++ b/config.json
@@ -2,9 +2,10 @@
     "output_directory": "assets/samples/",
     "path_to_domain_file": "/media/mike/WDC4_1/Neo/gerzson.boros/assets/domains.txt",
     "database_host": "mongodb://localhost:27017",
+    "level_db_path": "assets/storage.leveldb",
     "database_name": "my_test",
     "database_collection": "text_data",
-    "concurrency" : 10,
+    "concurrency" : 1,
     "chrome_timeout": 60
 
 }
