--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
     "output_directory": "assets/samples/",
-    "path_to_domain_file": "assets/1000-domains.txt",
+    "path_to_domain_file": "assets/domains2.txt",
     "database_host": "mongodb://localhost:27017",
     "level_db_path": "assets/storage.leveldb",
     "database_name": "my_test",
